--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+click==7.1.2
+Flask==1.1.2
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
 mysql==0.0.2
 mysql-connector-python==8.0.21
 mysqlclient==2.0.1
@@ -5,3 +10,4 @@ protobuf==3.13.0
 selenium==3.141.0
 six==1.15.0
 urllib3==1.25.10
+Werkzeug==1.0.1
