--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ mysql==0.0.2
 mysql-connector-python==8.0.21
 mysqlclient==2.0.1
 protobuf==3.13.0
+redis==3.5.3
 selenium==3.141.0
 six==1.15.0
 urllib3==1.25.10
